--- a/2/day17/index.html
+++ b/2/day17/index.html
@@ -7,19 +7,21 @@
 </head>
 <body>
     <div id="mainContent">
-                <div class="priorityArticle">HIGH</div>
-        <form class="inputConteiner" id="h_inputConteiner">
+                <div class="priorityArticle" id="h_article">HIGH</div>
+        <form id="h_inputConteiner">
             <label for="task"></label>
             <input class="inputField" id="h_inputField"  type="text" name="task" placeholder="Добавить важных дел" required>
             <button class="addButton" id="h_addButton"></button>
         </form>
-        <div class="priorityArticle">LOW</div>
-        <form class= "inputConteiner" id="l_inputConteiner">
+        <div class="priorityArticle" id="l_article">LOW</div>
+        <form id="l_inputConteiner">
             <label for="task"></label>
             <input class="inputField" id="l_inputField"  type="text" name="task" placeholder="Добавить дел" required>
             <button class="addButton" id="l_addButton"></button>
         </form>
            </div>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
+    <script type="module" src="view.js"></script>
+    <script type="module" src="functions.js"></script>
 </body>
 </html>
