сделал чуть опрятнее

--- a/2/day18/index.html
+++ b/2/day18/index.html
@@ -9,14 +9,14 @@
     <div id="mainContent">
                 <div class="priorityArticle" id="h_article">HIGH</div>
         <form id="h_inputConteiner">
-            <label for="task"></label>
+            <label for="task" class="labelform"></label>
             <input class="inputField" id="h_inputField"  type="text" name="task" placeholder="Добавить важных дел" required maxlength="25">
             <button class="addButton" id="h_addButton"></button>
         </form>
         <div id="highNewTaskConteiner"></div>
         <div class="priorityArticle" id="l_article">LOW</div>
         <form id="l_inputConteiner">
-            <label for="task"></label>
+            <label for="task" class="labelform"></label>
             <input class="inputField" id="l_inputField"  type="text" name="task" placeholder="Добавить дел" required maxlength="25">
             <button class="addButton" id="l_addButton"></button>
         </form>
