--- a/2/day19/index.html
+++ b/2/day19/index.html
@@ -25,5 +25,6 @@
     <script type="module" src="main.js"></script>
     <script type="module" src="view.js"></script>
     <script type="module" src="functions.js"></script>
+    <script type="module" src="main.mjs"></script>
 </body>
 </html>
