создал файл view.js со списком всех переменных и внес module в index.html

--- a/2/day25(погода)/idnex.html
+++ b/2/day25(погода)/idnex.html
@@ -24,7 +24,6 @@
     <img id="weather_icon" src="./images/weather_icon.png">
     <div id="city_to_favourites"><p id="name_of_city">Moscow</p></div>
     <img id="add_to_favourites" src="./images/favourites_icon.png">
-
 </div>
 
 <!-- Добавленные в избранное города -->
@@ -38,7 +37,8 @@
         <li id="Amsterdam">Amsterdam</li>
     </ul>
 </div>
-
+<script src="main.js" type="module"></script>
+<script src="view.js" type="module"></script>
 </div>
 </body>
 </html>
