теперь меняется значок погоды

--- a/2/day26/idnex.html
+++ b/2/day26/idnex.html
@@ -21,9 +21,12 @@
 <div id="current_cyty_info">
     <p id="temperature">14</p>
     <img id="degrees" src="./images/degrees_icon.png">
-    <img id="weather_icon" src="./images/weather_icon.png">
+    <img id="weather_icon" src="https://openweathermap.org/img/wn/04d@2x.png">
+<div>
     <div id="city_to_favourites"><p id="name_of_city">Moscow</p></div>
     <img id="add_to_favourites" src="./images/favourites_icon.png">
+</div>
+
 </div>
 
 <!-- Добавленные в избранное города -->
