работает переключатель сердца

--- a/2/day26/idnex.html
+++ b/2/day26/idnex.html
@@ -12,7 +12,7 @@
 <!-- Строка для поиска города -->
 <form id="search_city">
     <label for="input_city">
-    <input id="search_city_field" type="text" name="input_city" placeholder="Moscow" required>
+    <input id="search_city_field" type="text" name="input_city" placeholder="City" required>
     <button id="search_button" type="submit"></button>
     </label>
 </form>
