данные выбранных городов при загрузке страницы загружаются с JSON

--- a/2/day26/idnex.html
+++ b/2/day26/idnex.html
@@ -32,16 +32,11 @@
 <!-- Добавленные в избранное города -->
 <div id="favourites_cities">
     <div id="article_favourites_cities"><p id="P_article_favourites_cities" >Added Locations:</p></div>
-    <ul id="list_of_favourites_cities">
-        <li>Rostov-on-Don</li>
-        <li id="Delhi">Delhi</li>
-        <li id="Londin">Londin</li>
-        <li id="Beijing">Beijing</li>
-        <li id="Amsterdam">Amsterdam</li>
-    </ul>
+    <div id="list_of_favourites_cities"></div>
 </div>
 <script src="main.js" type="module"></script>
 <script src="view.js" type="module"></script>
+<script src="main.mjs" type="module"></script>
 </div>
 </body>
 </html>
