--- a/2/day26/idnex.html
+++ b/2/day26/idnex.html
@@ -23,7 +23,7 @@
     <img id="degrees" src="./images/degrees_icon.png">
     <img id="weather_icon" src="https://openweathermap.org/img/wn/04d@2x.png">
 <div>
-    <div id="city_to_favourites"><p id="name_of_city">Moscow</p></div>
+    <div id="city_to_favourites"><p id="name_of_city">Rostov-on-Don</p></div>
     <img id="add_to_favourites" src="./images/favourites_icon.png">
 </div>
 
@@ -36,7 +36,7 @@
 </div>
 <script src="main.js" type="module"></script>
 <script src="view.js" type="module"></script>
-<script src="main.mjs" type="module"></script>
+<script src="data.js" type="module"></script>
 </div>
 </body>
 </html>
