работает как надо

--- a/3/day5/idnex.html
+++ b/3/day5/idnex.html
@@ -76,6 +76,7 @@
 </div>
 <script src="main.js" type="module"></script>
 <script src="view.js" type="module"></script>
+<script src="main.mjs" type="module"></script>
 </div>
 </body>
 </html>
