добавил обозначения для UI ELem

--- a/3/day19/index.html
+++ b/3/day19/index.html
@@ -27,5 +27,6 @@
         </div>
     </div>
     <script type="module" src="main.js"></script>
+    <script type="module" src="view.js"></script>
 </body>
 </html>
