--- a/4/day5/index.html
+++ b/4/day5/index.html
@@ -38,7 +38,10 @@
     </div>
 </div>
 </div>
-
+<template id="myMessage">
+        <p class="text"></p>
+        <p class="time"></p>
+</template>
 <!-- форма отправки сообщения -->
 <form id="send_message_form">
     <label for="input_text">
@@ -61,7 +64,8 @@
         </form>
     </div>
 </div>
-
 </div>
+
+<script src="main.js" type="module"></script>
 </body>
 </html>
