переписал чат с ts

--- a/4/day11/index.html
+++ b/4/day11/index.html
@@ -6,7 +6,6 @@
     <title>Chat</title>
     <link href="popup.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link href="main.css" rel="stylesheet">
 </head>
 <body>
 <div id="mainContent">
@@ -17,7 +16,7 @@
 
 <!-- сам чат -->
 <div id="chat_conteiner">
-    <div id="prosloika">
+    <div id="chat">
     <div  class="my_message">
         <p class="text">Я: Добрый день!</p>
         <p class="time">18:45</p>
