теперь можно менять имя на сервере

--- a/4/day13/index.html
+++ b/4/day13/index.html
@@ -11,6 +11,8 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<div>Имя в чате: 
+<div id="nameInChat">Аноним</div>
 <div id="mainContent">
 
     <!-- кнопка настройки -->
