--- a/4/day13/index.html
+++ b/4/day13/index.html
@@ -11,6 +11,7 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
+    <!-- отображение имени в чате -->
 <div>Имя в чате: 
 <div id="nameInChat">Аноним</div>
 <div id="mainContent">
