--- a/4/day15/index.html
+++ b/4/day15/index.html
@@ -23,31 +23,7 @@
 
     <!-- чат -->
 <div id="chatContent">
-    <div id="chat">
-        <!-- sms1 -->
-        <div  class="myMessage">
-            <p class="text">Я: Добрый день!</p>
-            <p class="time">18:45</p>
-        </div>
-        <!-- sms2 -->
-        <div class="userMessage">
-            <p class="text">Собеседник: Добрый день!</p>
-            <p class="time">18:45</p>
-        </div>
-        <!-- sms3 -->
-        <div class="userMessage">
-            <p class="text">Собеседник: А это второе и, кажется, оно очень 
-                длинное, чтобы поместиться на 
-                одной строке</p>
-            <p class="time">18:45</p>
-        </div>
-        <!-- sms4 -->
-        <div  class="myMessage">
-            <p class="text">Я: Добрый день!</p>
-            <p class="time">18:45</p>
-        </div>
-        <div class="space"></div>
-    </div>
+    <div id="chat"></div>
 </div>
 
 
