осталось доавить скролл

--- a/4/day15/index.html
+++ b/4/day15/index.html
@@ -29,6 +29,7 @@
 
         <!-- шаблон для сообщений -->
         <template id="messageTemplate">
+            <p class="userName">userName</p>
             <p class="text"></p>
             <p class="time"></p>
         </template>
