--- a/4/day17/index.html
+++ b/4/day17/index.html
@@ -26,6 +26,8 @@
     <div id="chat"></div>
 </div>
 
+<div id="chatEnd">Вся история загружена</div>
+
 
         <!-- шаблон для сообщений -->
         <template id="messageTemplate">
