--- a/5/films/index.html
+++ b/5/films/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/css/sidebar.css" />
+    <link rel="stylesheet" href="./src/css/film-card.css" />
+    <link rel="stylesheet" href="./src/css/header.css" />
     <title>FILMS</title>
   </head>
   <body>
