--- a/6/films/index.html
+++ b/6/films/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/components/filter/index.css" />
-    <link rel="stylesheet" href="./src/components/home-page-content/index.css" />
+    <link
+      rel="stylesheet"
+      href="./src/components/home-page-content/index.css"
+    />
     <link rel="stylesheet" href="./src/components/header/index.css" />
     <link rel="stylesheet" href="./src/components/film-page/index.css" />
+    <link
+      rel="stylesheet"
+      href="./src/components/header/modal-email/index.css"
+    />
     <title>FILMS</title>
   </head>
   <body>
