--- a/6/films/index.html
+++ b/6/films/index.html
@@ -14,6 +14,10 @@
       rel="stylesheet"
       href="./src/components/header/modal-email/index.css"
     />
+    <link
+      rel="stylesheet"
+      href="./src/components/header/modal-token/index.css"
+    />
     <title>FILMS</title>
   </head>
   <body>
